--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<head>
+  <title>「私の趣味」というページを作成しよう</title>
+  <meta name="description" content="このページは5章の課題です。"> 
+  <meta charset="utf-8"> 
+
+</head>
 <html> 
 <body> 
   <h1>私の趣味</h1>
