--- a/kadai_014/kadai_014.html
+++ b/kadai_014/kadai_014.html
@@ -27,7 +27,7 @@
   <h2 class="skyblue">好きな食べ物</h2>
   <p>ハンバーグ、きつねうどん、抹茶アイス</p>
   <h2 class="pink">プログラミングを始めた理由</h2>
-  <p>ログラマーとして転職したいから。<br>
+  <p>プログラマーとして転職したいから。<br>
     転職して数年後にはフリーランスになって、旅行しながら仕事したい！</p>
 </body>
 
