--- a/kadai_014/kadai_014.html
+++ b/kadai_014/kadai_014.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@0;1&display=swap" rel="stylesheet">
 </head>
-<html>
+<html style="font-size: 20px;">
 
 <body> 
   <h1 class="google-fonts"><span class="skyblue">M</span>Y<span class="pink">P</span>ROFILE</h1>
