--- a/kadai_018/kadai_018.html
+++ b/kadai_018/kadai_018.html
@@ -8,9 +8,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@0;1&display=swap" rel="stylesheet">
 </head>
-<html style="font-size: 20px;">
+<html>
 
-<body> 
+<body style="text-align: -webkit-center;"> 
   <div id="top">
     <p class="top-child">sample</p>
     <p class="top-child">sample</p>
